istio-test-task4/deploy-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-replicas
  namespace: istio-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: config-volume
        configMap:
          name: nginx-configmap
      - name: nginx-html
        emptyDir: {}
